<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_transaction_history"
            android:icon="@android:drawable/ic_menu_sort_by_size"
            android:title="@string/nav_transaction_history" />
        <item
            android:id="@+id/nav_profile_settings"
            android:icon="@android:drawable/ic_menu_manage"
            android:title="@string/nav_profile_settings" />
    </group>

    <item android:title="Account">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@android:drawable/ic_lock_power_off"
                android:title="@string/nav_logout" />
        </menu>
    </item>
</menu> 